--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -141,6 +141,11 @@
                         <viewLayoutGuide key="safeArea" id="fEY-jX-p3D"/>
                     </view>
                     <navigationItem key="navigationItem" id="AR1-Gf-SXB"/>
+                    <connections>
+                        <outlet property="entryTextView" destination="q8c-dg-DrH" id="ZtY-fX-W1s"/>
+                        <outlet property="moodController" destination="TxO-vG-DYa" id="X4M-uA-uWp"/>
+                        <outlet property="titleTextField" destination="nQJ-dV-w6Z" id="lg0-v3-Fbh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OLd-fX-3gG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
