--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
             </objects>
             <point key="canvasLocation" x="-301" y="338"/>
         </scene>
-        <!--Entry Detail View Controller-->
+        <!--Journal Detail-->
         <scene sceneID="sPg-Wr-D8u">
             <objects>
                 <viewController id="0m7-IK-G72" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -91,11 +91,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" id="6Ns-r6-4Xp">
-                                <rect key="frame" x="20" y="121" width="374" height="441.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Kgs-qg-UKX">
+                                <rect key="frame" x="20" y="108" width="374" height="441.5"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="TxO-vG-DYa">
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="7M8-J1-3g5">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
                                         <segments>
                                             <segment title="🙁"/>
@@ -103,28 +102,28 @@
                                             <segment title="😃"/>
                                         </segments>
                                     </segmentedControl>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nQJ-dV-w6Z">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rbc-78-Rha">
                                         <rect key="frame" x="0.0" y="46" width="374" height="22"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oGp-wA-bbh">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rZA-Lr-r9u">
                                         <rect key="frame" x="0.0" y="83" width="374" height="358.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TkR-yk-EYc">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NzK-Un-UaS">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="14.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PG9-eg-1ux">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2M4-Uj-x9B">
                                                 <rect key="frame" x="0.0" y="22.5" width="374" height="2"/>
                                                 <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="2" id="1ox-o9-VjA"/>
+                                                    <constraint firstAttribute="height" constant="2" id="OMp-eG-FE7"/>
                                                 </constraints>
                                             </view>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="q8c-dg-DrH">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bUz-Pl-BEd">
                                                 <rect key="frame" x="0.0" y="32.5" width="374" height="326"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -134,22 +133,22 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <viewLayoutGuide key="safeArea" id="fWU-Rb-WTp"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Kgs-qg-UKX" firstAttribute="leading" secondItem="fEY-jX-p3D" secondAttribute="leading" constant="20" id="3Tb-5O-iDd"/>
+                            <constraint firstItem="fEY-jX-p3D" firstAttribute="trailing" secondItem="Kgs-qg-UKX" secondAttribute="trailing" constant="20" id="euP-xZ-NUG"/>
+                            <constraint firstItem="Kgs-qg-UKX" firstAttribute="height" secondItem="EeR-18-wF6" secondAttribute="height" multiplier="0.492746" id="qXp-s2-xq7"/>
+                            <constraint firstItem="Kgs-qg-UKX" firstAttribute="top" secondItem="fEY-jX-p3D" secondAttribute="top" constant="20" id="r4y-Lk-Tdy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fEY-jX-p3D"/>
                     </view>
-                    <navigationItem key="navigationItem" id="AR1-Gf-SXB"/>
-                    <connections>
-                        <outlet property="entryTextView" destination="q8c-dg-DrH" id="ZtY-fX-W1s"/>
-                        <outlet property="moodController" destination="TxO-vG-DYa" id="X4M-uA-uWp"/>
-                        <outlet property="titleTextField" destination="nQJ-dV-w6Z" id="lg0-v3-Fbh"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="Journal Detail" id="AR1-Gf-SXB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OLd-fX-3gG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="696" y="356"/>
+            <point key="canvasLocation" x="661" y="338"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="R1n-Et-pPS">
@@ -231,23 +230,24 @@
                     <navigationItem key="navigationItem" title="Create Entry" id="ooD-li-PgL">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="qDC-or-MVI">
                             <connections>
-                                <action selector="cancel:" destination="BYZ-38-t0r" id="MYc-hc-lI6"/>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="jt0-aK-oj3"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="Wfo-FZ-eSQ">
                             <connections>
-                                <action selector="save:" destination="BYZ-38-t0r" id="cnr-lq-1n6"/>
+                                <action selector="save:" destination="BYZ-38-t0r" id="eB4-6N-s5B"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bodyTextView" destination="fip-JR-3Oq" id="gnI-U8-wZa"/>
-                        <outlet property="titleTextField" destination="KTT-FT-2Ie" id="abL-HZ-ve3"/>
+                        <outlet property="bodyTextView" destination="fip-JR-3Oq" id="tfJ-os-yzk"/>
+                        <outlet property="moodControl" destination="axR-Q8-Rrl" id="3mG-Sx-KUo"/>
+                        <outlet property="titleTextField" destination="KTT-FT-2Ie" id="H1a-6x-vP9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1394.2028985507247" y="-342.1875"/>
+            <point key="canvasLocation" x="1299" y="-342"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rU5-Qc-x21">
