--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -176,7 +176,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="SaZ-ze-k2z">
-                                <rect key="frame" x="20" y="179" width="374" height="358.5"/>
+                                <rect key="frame" x="20" y="127" width="374" height="358.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jEQ-o3-naq">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
@@ -211,7 +211,7 @@
                                 </subviews>
                             </stackView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zCA-C3-iKt">
-                                <rect key="frame" x="20" y="140" width="374" height="32"/>
+                                <rect key="frame" x="20" y="88" width="374" height="32"/>
                                 <segments>
                                     <segment title="☹️"/>
                                     <segment title="😐"/>
@@ -231,7 +231,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="B3u-et-Qvy"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Entry Details" id="0s3-yq-omQ"/>
+                    <navigationItem key="navigationItem" title="Entry Details" largeTitleDisplayMode="never" id="0s3-yq-omQ"/>
                     <connections>
                         <outlet property="entryTextField" destination="jEQ-o3-naq" id="MYu-l3-3rV"/>
                         <outlet property="entryTextView" destination="5Xu-2H-2z3" id="PC2-AJ-aat"/>
@@ -240,7 +240,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A0z-Td-Ok2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2451" y="414"/>
+            <point key="canvasLocation" x="2371" y="422"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rbX-Ag-osi">
