Added editing code

--- a/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="o6L-uH-0Wc">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="bAC-Rh-3xV">
                             <connections>
-                                <segue destination="aVG-wK-7JU" kind="presentation" identifier="AddEntry" modalPresentationStyle="fullScreen" id="5sq-GZ-NVy"/>
+                                <segue destination="aVG-wK-7JU" kind="presentation" identifier="AddEntryModalSegue" modalPresentationStyle="fullScreen" id="5sq-GZ-NVy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
