- create tasks controller properties to be able to access it from different files - call task controller methods in the right spots - inject task controller through create seg

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@ relate befell us.</string>
                     <navigationItem key="navigationItem" title="Journal - Day 2" id="Kpw-Me-fBy">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.square" catalog="system" id="Fuq-dH-mT4">
                             <connections>
-                                <segue destination="a9b-7a-cr5" kind="presentation" modalPresentationStyle="fullScreen" id="jI3-Id-ksO"/>
+                                <segue destination="a9b-7a-cr5" kind="presentation" identifier="CreateSeg" modalPresentationStyle="fullScreen" id="jI3-Id-ksO"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
