--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -271,9 +271,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="segmentedControlMood" destination="Yqx-vl-hQi" id="E5A-dH-KnG"/>
-                        <outlet property="textFieldTitle" destination="s0T-Dc-thd" id="1QI-fb-QO3"/>
-                        <outlet property="textView" destination="oTN-jb-bb6" id="WIR-nS-uOH"/>
+                        <outlet property="segmentedControlMood" destination="Yqx-vl-hQi" id="GTm-Yr-aAv"/>
+                        <outlet property="textFieldTitle" destination="s0T-Dc-thd" id="gRH-co-Zhe"/>
+                        <outlet property="textViewDescription" destination="oTN-jb-bb6" id="CD2-T4-0KX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="21R-YX-TDp" sceneMemberID="firstResponder"/>
